--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "eslint": "^6.6.0"
     },
     "dependencies": {
-        "axios": "^0.19.0"
+        "axios": "^0.19.0",
+        "sqlite3": "^4.1.0"
     }
 }
