--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
         "axios": "^0.19.0",
         "bn.js": "^5.0.0",
         "dotenv": "^8.2.0",
+        "http": "0.0.0",
         "log4js": "^6.1.0",
         "sqlite3": "^4.1.0",
+        "url": "^0.11.0",
         "web3": "^1.2.4"
     }
 }
