--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
         "url": "https://github.com/Lendfme/oraclesystem/issues"
     },
     "homepage": "https://github.com/Lendfme/oraclesystem",
+    "scripts": {
+        "lint": "npm run lint:js",
+        "lint:fix": "npm run lint:js:fix",
+        "lint:js": "eslint --ignore-path .gitignore .",
+        "lint:js:fix": "eslint --ignore-path .gitignore . --fix"
+    },
     "devDependencies": {
         "eslint": "^6.6.0"
     },
