A Feed price for another btc on the Rinkeby.

--- a/.eslintrc
+++ b/.eslintrc
@@ -24,7 +24,9 @@
         "eol-last": ["error", "always"],
         "eqeqeq": ["error", "smart"],
         "generator-star-spacing": ["error", "before"],
-        "indent": ["error", 2],
+        "indent": ["error", 2, {
+            "SwitchCase": 1
+        }],
         "keyword-spacing": ["error", {
             "before": true,
             "after": true
