--- a/.example.env
+++ b/.example.env
@@ -1,3 +1,6 @@
-INFURA_KEY =
-POSTER_PRIVATE_KEY =
 IMPROVING_FACTOR =
+INFURA_KEY =
+MONITOR_URL =
+POSTER_PRIVATE_KEY =
+RANDOM_PORT =
+SERVICE_NAME =
