A Feed price for husd.

--- a/.example.env
+++ b/.example.env
@@ -1,8 +1,10 @@
 IMPROVING_FACTOR =
 INFURA_KEY =
+MAX_SWING =
 MOMENT =
 MONITOR_URL =
 NET =
 POSTER_PRIVATE_KEY =
 RANDOM_PORT =
 SERVICE_NAME =
+
